Terminando varios aspectos del código [NUEVAS]  * Añadiendo lógica para el ratón:    - Uso de un nuevo componente para definir un espacio para el ratón.    - El modelo vtuber ahora utiliza valores para el ratón.  * Agregando ícono para la aplicación.  * Añadiendo licencias para la aplicación.
[MODIFICACIONES]
 * Corrigiendo errores donde no se usaban las llaves correctas.
 * Utilizando Enum en vez de cadenas para varias funciones.
 * Retirando código antiguo que ya no se utilizar como el viejo modelo
   vtuber,
 * y cambiando también código viejo que aún es útil como el delta
   time.
 * Moviendo archivos de 'src/resources/res/' a 'src/resources/'.
 * Nuevas cadenas para las traducciones.
 * Modificando los archivos .bat y tienen correcto funcionamiento.
 * Cambiando la organización de las librerías externas y agregando sus
   respectivas licencias.

[PENDIENTE]
 * Documentación de algunas clases.
 * Guardas con compresión.
 * Cambiar README.